# codevet

./: .gitignore  NOTICE.md  README.md  codevet.yaml.example  pyproject.toml
codevet/: __init__.py  cli.py  config.py  fixer.py  models.py  preflight.py  prompts.py  sandbox.py  scorer.py  utils.py  vetter.py
tests/: conftest.py  test_battle.py  test_cli.py  test_comprehensive.py  test_coverage_gaps.py  test_e2e.py  test_fixer.py  test_models.py  test_preflight.py  test_prompts.py  test_sandbox.py  test_scorer.py  test_utils.py  test_vetter.py
tests/fixtures/: buggy_auth.py  buggy_edge_cases.py  buggy_security.py  buggy_types.py
vscode-extension/: package.json  tsconfig.json
vscode-extension/src/: extension.ts
